--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       content="WebApp with personal fishing results."
     />
     <title>MyFishApp</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cute+Font&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link rel = "icon" href = "./ico.png" type="image/png" sizes="32x32"> 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
